--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<meta charset="utf-8">
 	<title>KissKh - Stream HD Asian & K-Dramas with English Subtitles Online</title>
 	<meta name="description" content="KissKh streams free HD K-Dramas and Asian Dramas with English subtitles. Enjoy top-rated series online with a premium viewing experience and the latest episodes.">
-	
+	<meta name="msvalidate.01" content="203EA727BD431ACDAA3134BF33D9A4DD" />	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="index, follow">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
